--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="zafar">
         
     </div>
+   <div class="alisher">
     <h1>my name is Alisher</h1>
+    <!-- salom -->
+   </div>
 
 
     
